Added the rest of the endpoints to the documentation and pluralized the endpoints, improved the sql schema and did some refactoring
