# internal/dto/templateMetadata.go
@@ -1,1 +1,6 @@
 package dto
+
+type TemplateMetadata struct {
+	Id 			 int64 `json:"id"`
+	Placeholders string `json:"placeholders"`
+}
